modified:   README.md 	modified:   src/BillingTask.java 	modified:   src/Client.java
Added/removed some comments